--- a/style.css
+++ b/style.css
@@ -63,12 +63,11 @@ body {
     }
 }
 
-#qrreader {
+#qr-reader {
     position: fixed; /* or absolute */
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: 10; /* Ensure it's above other content */
-    display: none; /* Initially hidden */
 }
