Implement Cookies to save Autoplay and random playback state, Add visual feedback for Player state

--- a/style.css
+++ b/style.css
@@ -160,3 +160,11 @@ body {
     color: black;
     z-index: 4;
 }
+
+#cookielist {
+    display: none;
+}
+
+#playback-duration {
+    width: 50px;
+}
