--- a/style.css
+++ b/style.css
@@ -115,6 +115,18 @@ hr {
   background-size: contain;
 }
 
+.button_startstop:disabled {
+  background: #666;
+  cursor: not-allowed;
+  opacity: 0.6;
+  transform: none;
+}
+
+.button_startstop:disabled:hover {
+  background: #666;
+  transform: none;
+}
+
 #qr-reader {
   position: relative;
   width: 100%;
